[package]
name = "studious-robot"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
tera = "1.10.0"
serde = "1.0.126"

[dependencies.diesel]
version = "1.4.6"
features = ["sqlite"]
